--- a/package.json
+++ b/package.json
@@ -1,40 +1,34 @@
 {
   "name": "undefine",
-  
-  "version": "0.1.0",
-  
-  "description": "Module loader, for node, browser globals, and AMD define",
-  
+  "version": "0.2.0",
+  "description": "Universal Module Loader, for node.js, browser scripts, bundles, and AMD define loaders",
   "main": "undefine.js",
-  
   "engines": {
     "node": ">=0.6.0"
   },
-  
+  "dependencies": {
+  },
   "devDependencies": {
-    "coffee-script"         : "1.7.1",
-    "mocha"                 : "1.18.2",
-    "expect.js"             : "0.3.1",
-    "mocha-unfunk-reporter" : "0.4.0"
+    "requirejs": "^2.1.17",
+    "curl-amd": "^0.8.12",
+    "coffee-script": "1.7.1",
+    "mocha": "1.18.2",
+    "expect.js": "0.3.1",
+    "mocha-unfunk-reporter": "0.4.0"
   },
-  
   "scripts": {
-    "postinstall": "ln -s ../. node_modules/undefine || true"
+    "postinstall": "npm link && npm link undefine"
   },
-  
   "repository": {
     "type": "git",
-    "url":  "git://github.com/ReactiveSets/undefine.git"
+    "url": "git://github.com/ReactiveSets/undefine.git"
   },
-  
   "keywords": [
     "loader",
     "module",
     "AMD",
     "UMD"
   ],
-  
   "author": "Reactive Sets",
-  
   "license": "MIT"
 }
