--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undefine",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Universal Module Loader, for node.js, browser scripts, bundles, and AMD define loaders",
   "main": "undefine.js",
   "engines": {
@@ -9,6 +9,7 @@
   "dependencies": {
   },
   "devDependencies": {
+    "uglify-js": "latest",
     "requirejs": "^2.1.17",
     "curl-amd": "^0.8.12",
     "coffee-script": "1.7.1",
@@ -17,7 +18,9 @@
     "mocha-unfunk-reporter": "0.4.0"
   },
   "scripts": {
-    "postinstall": "npm link && npm link undefine"
+    "postinstall": "npm link && npm link undefine || true",
+    "build": "cd dist && node ../node_modules/uglify-js/bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
+    "stats": "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && wc ../undefine.js * | grep -v total && rm *.gz"
   },
   "repository": {
     "type": "git",
