--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "undefine",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Universal Module Loader, for node.js, browser scripts, bundles, and AMD define loaders",
   "main": "undefine.js",
   "engines": {
@@ -18,7 +18,7 @@
     "mocha-unfunk-reporter": "0.4.0"
   },
   "scripts": {
-    "postinstall": "ln -s ../. node_modules/undefine || true",
+    "postinstall": "mkdir -p node_modules && ln -s ../. node_modules/undefine || true",
     "test"       : "node test/for_node",
     "build"      : "cd dist && node ../node_modules/uglify-js/bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
     "stats"      : "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && cat undefine-min.map | gzip > undefine-min.map.gz && wc ../undefine.js * | grep -v total && rm *.gz"
