--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "uglify-js": "latest",
-    "requirejs": "^2.1.17",
-    "curl-amd": "^0.8.12"
+    "uglify-js": "2.x",
+    "requirejs": "2.x",
+    "curl-amd": "0.8.x"
   },
   "scripts": {
     "preinstall": "node node_modules_self_reference.js remove",
     "postinstall": "node node_modules_self_reference.js add",
     "test": "node test/for_node",
-    "build": "cd dist && node ../node_modules/uglify-js/bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
+    "build": "cd dist && sh ../node_modules/.bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
     "stats": "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && cat undefine-min.map | gzip > undefine-min.map.gz && wc ../undefine.js * | grep -v total && rm *.gz"
   },
   "repository": {
