--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "undefine",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "description": "Universal Module Loader, for node.js, browser scripts, bundles, and AMD define loaders",
   "main": "undefine.js",
   "engines": {
     "node": ">=0.6.0"
   },
   "files": [
-    "dist",
-    "node_modules_self_reference.js"
+    "dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "allow-require-me": "^1.0.0"
+  },
   "devDependencies": {
-    "uglify-js": "2.x",
+    "curl-amd": "0.8.x",
     "requirejs": "2.x",
-    "curl-amd": "0.8.x"
+    "uglify-js": "2.x"
   },
   "scripts": {
-    "preinstall": "node node_modules_self_reference.js remove",
-    "postinstall": "node node_modules_self_reference.js add",
     "test": "node test/for_node",
     "build": "cd dist && sh ../node_modules/.bin/uglifyjs --compress --mangle --output undefine-min.js --source-map undefine-min.map -- ../undefine.js",
-    "stats": "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && cat undefine-min.map | gzip > undefine-min.map.gz && wc ../undefine.js * | grep -v total && rm *.gz"
+    "stats": "cd dist && cat undefine-min.js | gzip > undefine-min.js.gz && cat ../undefine.js | gzip > undefine.js.gz && cat undefine-min.map | gzip > undefine-min.map.gz && wc ../undefine.js * | grep -v total && rm *.gz",
+    "postinstall": "node node_modules\\allow-require-me\\allow-require-me.js add"
   },
   "repository": {
     "type": "git",
